argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
  labels:
    gateway-api: default
spec:
  hostnames:
    - "argocd.example.com"
  parentRefs:
    - name: default
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
